--- a/css/custom.css
+++ b/css/custom.css
@@ -1,12 +1,16 @@
 body {
 	line-height: 1.75em;
 	font-size: 1.5em;
-	color: #f1f1f1;
-	background-color: #373737;
+	color: #fff;
+	background-color: #242631; /*dark slate navy*/
 }
 
 h1 {
 	font-size: 3em;
+}
+
+hr {
+	border-color: #795D3E;
 }
 
 .nav-button {
