--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,8 @@
 body {
 	line-height: 1.75em;
 	font-size: 1.5em;
+	font-weight: 200;
+	letter-spacing: 0.5px;
 	color: #fff;
 	background-color: #242631; /*dark slate navy*/
 }
