gray white body font and sharp corners on tiles

--- a/css/custom.css
+++ b/css/custom.css
@@ -3,7 +3,7 @@ body {
 	font-size: 1.5em;
 	font-weight: 200;
 	letter-spacing: 0.5px;
-	color: #fff;
+	color: #e7e7e7;
 	background-color: #242631; /*dark slate navy*/
 }
 
