--- a/css/custom.css
+++ b/css/custom.css
@@ -57,6 +57,13 @@ button#home, button#search {
 	border-right: 1px solid #ddd;
 }
 
+/* iPhone 6 */
+@media (min-width: 375px) {
+	body {
+		font-size: 1.75em;
+	}
+}
+
 
 @media (min-width: 768px) {
 	body {
