--- a/css/custom.css
+++ b/css/custom.css
@@ -7,6 +7,10 @@ body {
 	background-color: #242631;
 }
 
+body, h1, h2, h3, h4 {
+	font-family: 'Oswald', sans-serif;
+}
+
 h1 {
 	font-size: 3em;
 }
