--- a/css/custom.css
+++ b/css/custom.css
@@ -1,14 +1,24 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway);
+
+@font-face {
+    font-family: 'TexGyreAdventor';
+    src: url('../fonts/texgyreadventor-regular.otf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
 	line-height: 1.75em;
-	font-size: 1.15em;
+	font-size: 1.25em;
 	font-weight: 200;
 	letter-spacing: 0.5px;
 	color: #e7e7e7;
 	background-color: #242631;
-	font-family: 'Oswald', Impact, sans-serif;
+/*	font-family: 'Raleway', sans-serif;*/
+	font-family: 'TexGyreAdventor', 'Century Gothic', sans-serif;
 }
 
-body, h1, h2, h3, h4 {
+   h1, h2, h3, h4 {
 	font-family: 'Oswald', Impact, sans-serif;
 }
 
@@ -50,12 +60,16 @@ nav i.glyphicon {
 }
 
 .gig-posting {
-	border-bottom: 1px solid white;
-	padding: 10px; 
+	background-color: #434654;
+	margin-bottom: 10px;
+}
+
+.gig-text {
+	padding: 10px;
 }
 
 .top-margin {
-	margin-top: 15px;
+	margin-top: 20px;
 }
 
 button#home, button#search {
@@ -107,3 +121,131 @@ button#home, button#search {
 		padding: 25px;
 	}
 }
+
+
+
+/*LISTING EXPANSION*/
+#content-1 {
+	display: none;
+}
+
+
+/*CHECKBOX EFFECT*/
+
+@-webkit-keyframes check {
+	0% {
+		height: 0;
+		width: 0;
+	}
+	25% {
+		height: 0;
+		width: 10px;
+	}
+	50% {
+		height: 20px;
+		width: 10px;
+	}
+}
+@-moz-keyframes check {
+	0% {
+		height: 0;
+		width: 0;
+	}
+	25% {
+		height: 0;
+		width: 10px;
+	}
+	50% {
+		height: 20px;
+		width: 10px;
+	}
+}
+@-ms-keyframes check {
+	0% {
+		height: 0;
+		width: 0;
+	}
+	25% {
+		height: 0;
+		width: 10px;
+	}
+	50% {
+		height: 20px;
+		width: 10px;
+	}
+}
+@keyframes check {
+	0% {
+		height: 0;
+		width: 0;
+	}
+	25% {
+		height: 0;
+		width: 10px;
+	}
+	50% {
+		height: 20px;
+		width: 10px;
+	}
+}
+
+
+.checkbox {
+	display: inline-block;
+	height: 125px;
+	width: 125px;
+	margin: 0px 5px;
+	border: 3px solid #f1f1f1;
+	border-radius: 0px;
+}
+
+
+	.checkbox:hover {
+		background-color: rgba(0, 0, 0, 0.5);
+	}
+
+.checkbox label  {
+	display: block;
+	height: 125px;
+	position: relative;
+	width: 125px;
+}
+.checkbox label:after {
+  /*
+  This element has a border on the right, and top. By rotating it looks like a check symbol, but the wrong way. That's why I'm flipping it with scaleX(-1)
+  */
+  -moz-transform: scaleX(-1) rotate(135deg);
+  -ms-transform: scaleX(-1) rotate(135deg);
+  -webkit-transform: scaleX(-1) rotate(135deg);
+  transform: scaleX(-1) rotate(135deg);
+  /*
+  I want to position the symbol using the left top, because when increasing the width and height of an object, it expands from the top left corner as well. That is what makes it looks like it's being drawn.
+  */
+  -moz-transform-origin: left top;
+  -ms-transform-origin: left top;
+  -webkit-transform-origin: left top;
+  transform-origin: left top;
+  border-right: 7px solid #cee;
+  border-top: 7px solid #cee;
+  content: '';
+  display: block;
+  height: 40px;
+  left: 40%;
+  position: absolute;
+  top: 50px;
+  width: 20px;
+}
+.checkbox label:hover:after {
+	border-color: #bdd;
+}
+.checkbox input  {
+	display: none;
+}
+.checkbox input:checked + label:after {
+	-webkit-animation: check 0.8s;
+	-moz-animation: check 0.8s;
+	-o-animation: check 0.8s;
+	animation: check 0.8s;
+	border-color: #5cb85c;
+}
+
