--- a/css/custom.css
+++ b/css/custom.css
@@ -18,7 +18,7 @@ body {
 	font-family: 'TexGyreAdventor', 'Century Gothic', sans-serif;
 }
 
-   h1, h2, h3, h4 {
+h1, h2, h3, h4 {
 	font-family: 'Oswald', Impact, sans-serif;
 }
 
@@ -76,52 +76,6 @@ button#home, button#search {
 	border-right: 1px solid #ddd;
 }
 
-/* iPhone 6 */
-@media (min-width: 375px) {
-	body {
-		font-size: 1.5em;
-		line-height: 1.8em;
-	}
-}
-
-
-@media (min-width: 768px) {
-	h1 {
-		font-size: 3.25em;
-	}
-	h2 {
-		font-size: 1.75em;
-	}
-	nav {
-		padding: 10px;
-	}
-}
-
-@media (min-width: 992px) {
-	body {
-		font-size: 1.75em;
-	}
-	h1 {
-		font-size: 3.75em;
-	}
-	h2 {
-		font-size: 1.25em;
-	}
-}
-
-@media (min-width: 1200px) {
-	body {
-		font-size: 2em;
-		line-height: 2em;
-	}
-	h1 {
-		font-size: 3.5em;
-	}
-	nav {
-		padding: 25px;
-	}
-}
-
 
 
 /*LISTING EXPANSION*/
@@ -132,7 +86,7 @@ button#home, button#search {
 
 /*CHECKBOX EFFECT*/
 
-@-webkit-keyframes check {
+/*@-webkit-keyframes check {
 	0% {
 		height: 0;
 		width: 0;
@@ -187,40 +141,40 @@ button#home, button#search {
 		height: 20px;
 		width: 10px;
 	}
-}
+}*/
 
 
+
+/* ===============================
+ *    INTERESTS PAGE WITH TILES
+ * ===============================
+ */
 .checkbox {
-	display: inline-block;
-	height: 125px;
-	width: 125px;
+	width: 110px;
+	height: 110px;
 	margin: 0px 5px;
-	border: 3px solid #f1f1f1;
+	border: 2px solid #f1f1f1;
 	border-radius: 0px;
+	display: inline-block;
 }
-
-
-	.checkbox:hover {
-		background-color: rgba(0, 0, 0, 0.5);
-	}
+.checkbox:hover {
+	background-color: rgba(0, 0, 0, 0.5);
+}
 
 .checkbox label  {
 	display: block;
-	height: 125px;
-	position: relative;
-	width: 125px;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
 }
-.checkbox label:after {
-  /*
-  This element has a border on the right, and top. By rotating it looks like a check symbol, but the wrong way. That's why I'm flipping it with scaleX(-1)
-  */
+
+/*.checkbox label:after {
   -moz-transform: scaleX(-1) rotate(135deg);
   -ms-transform: scaleX(-1) rotate(135deg);
   -webkit-transform: scaleX(-1) rotate(135deg);
   transform: scaleX(-1) rotate(135deg);
-  /*
-  I want to position the symbol using the left top, because when increasing the width and height of an object, it expands from the top left corner as well. That is what makes it looks like it's being drawn.
-  */
+
   -moz-transform-origin: left top;
   -ms-transform-origin: left top;
   -webkit-transform-origin: left top;
@@ -238,7 +192,7 @@ button#home, button#search {
 .checkbox label:hover:after {
 	border-color: #bdd;
 }
-.checkbox input  {
+.checkbox input {
 	display: none;
 }
 .checkbox input:checked + label:after {
@@ -248,4 +202,65 @@ button#home, button#search {
 	animation: check 0.8s;
 	border-color: #5cb85c;
 }
+*/
+
+
+/* iPhone 6 */
+@media (min-width: 375px) {
+	body {
+		font-size: 1.5em;
+		line-height: 1.8em;
+	}
+	.checkbox {
+		width: 130px;
+		height: 130px;
+	}
+}
+
+
+@media (min-width: 768px) {
+	h1 {
+		font-size: 3.25em;
+	}
+	h2 {
+		font-size: 1.75em;
+	}
+	nav {
+		padding: 10px;
+	}
+	.checkbox {
+		width: 175px;
+		height: 175px;
+	}
+}
+
+@media (min-width: 992px) {
+	body {
+		font-size: 1.75em;
+	}
+	h1 {
+		font-size: 3.75em;
+	}
+	h2 {
+		font-size: 1.25em;
+	}
+}
+
+@media (min-width: 1200px) {
+	body {
+		font-size: 2em;
+		line-height: 2em;
+	}
+	h1 {
+		font-size: 3.5em;
+	}
+	nav {
+		padding: 25px;
+	}
+	.checkbox {
+		width: 200px;
+		height: 200px;
+	}
+}
+
 
