--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Nunito);
+@import url(https://fonts.googleapis.com/css?family=Nunito:300);
 
 
 /*@font-face {
@@ -11,7 +11,6 @@
 body {
 	line-height: 1.75em;
 	font-size: 1.25em;
-	font-weight: 200;
 	letter-spacing: 0.5px;
 	color: #e7e7e7;
 	background-color: #242631;
@@ -210,7 +209,6 @@ button#home, button#search {
 @media (min-width: 375px) {
 	body {
 		font-size: 1.5em;
-		line-height: 1.8em;
 	}
 	.checkbox {
 		width: 130px;
