--- a/css/custom.css
+++ b/css/custom.css
@@ -18,8 +18,9 @@ body {
 /*	font-family: 'TexGyreAdventor', 'Century Gothic', sans-serif;
 */}
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5, h6 {
 	font-family: 'Oswald', Impact, sans-serif;
+	letter-spacing: 0.5px;
 }
 
 h1 {
@@ -30,6 +31,15 @@ h2 {
 	font-size: 2.25em;
 	line-height: 1.35em;
 	text-transform: uppercase;
+	text-align: center;
+}
+
+h2 span {
+	font-family: 'Nunito', sans-serif;
+}
+
+h3 {
+	font-size: 1.85em;
 }
 
 hr {
