edited bottom padding for gig content

--- a/css/custom.css
+++ b/css/custom.css
@@ -73,6 +73,7 @@ hr {
  nav {
 	background-color: #f1f1f1;
 	border-top: 1px solid #e0e0e0;
+	height: 4em;
 }
 
 /*.glyphicon {
@@ -89,8 +90,8 @@ nav i.glyphicon {
 	color: #f1f1f1;
 	display: inline-block;
 	float: left;
-	width: 33.33333333%;
 	height: 3.5em;
+	width: 33.33333333%;
 	padding: 0.5em;
 	background: transparent;
 }
