--- a/css/custom.css
+++ b/css/custom.css
@@ -107,15 +107,37 @@ button#home, button#search {
  */
 .gig-posting {
 	background-color: #434654;
-	margin-bottom: 10px;
+	margin-bottom: 4em;
+	border-radius: 2px;
+}
+
+/*.gig-posting:hover {
+	opacity: 0.8;
+	filter: alpha(opacity=80);
+}*/
+
+.gig-title {
+	cursor: pointer;
+	background-color: #f65f7e;
+	padding: 10px;
+	border-radius: 2px;
+	margin-top: 0.5em;
+
+	transition: all ease-in-out 0.2s;
+	-webkit-transition: all ease-in-out 0.2s;
+	-moz-transition: all ease-in-out 0.2s;
+}
+.gig-title:hover {
+	background-color: #f1f1f1;
+	color: #f65f7e;
 }
 
 .gig-text {
-	padding: 10px;
+	padding: 0.5em;
 }
 
 .top-margin {
-	margin-top: 20px;
+	margin-top: 1.5em;
 }
 
 
@@ -125,8 +147,6 @@ button#home, button#search {
 #content-1 {
 	display: none;
 }
-
-
 
 
 
