editing landing page

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3127,8 +3127,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #FF8700;
-  border-color: #473D32;
+  background-color: #FD7400;
+  border-color: #855E42;
 }
 .btn-primary:focus,
 .btn-primary.focus {
