--- a/css/custom.css
+++ b/css/custom.css
@@ -12,7 +12,7 @@ body {
 	line-height: 1.75em;
 	font-size: 1.25em;
 	letter-spacing: 0.5px;
-	color: #e7e7e7;
+	color: #f5f5f5;
 	background-color: #252525;
 	font-family: 'Roboto', 'Century Gothic', sans-serif;
 /*	font-family: 'TexGyreAdventor', 'Century Gothic', sans-serif;
@@ -47,7 +47,7 @@ h4 {
 	font-size: 1.5em;
 	text-align: center;
 	color: #252525;
-	padding: 0.65em 0 0.25em 0;
+	padding: 0.65em 0 0.1em 0;
 }
 
 h5 {
@@ -84,15 +84,21 @@ hr {
 }
 
 
-/* background colors */
-.navy-bkgrd {
-	background-color: #004358;;
-}
+/* colors */
 .white-bkgrd {
 	background-color: #f1f1f1;
 }
+.blue-bkgrd {
+	background-color: #1b85b8;
+}
 .seafoam-bkgrd {
-	background-color: #1F8A70;
+	background-color: #559e83;
+}
+.yellow-bkgrd {
+	background-color: #a09b41;
+}
+.orange-bkgrd {
+	background-color: #ae5a41;
 }
 
 
@@ -177,10 +183,10 @@ button#home, button#search {
 }
 a.company {
 	text-decoration: underline;
-	color: #aaa;
+	color: #cacaca;
 }
 a.company:hover {
-	color: #777;
+	color: #9a9a9a;
 }
 
 .gig-text {
@@ -200,7 +206,10 @@ button.interested, button.action {
 
 /*LISTING EXPANSION*/
 #content-1,
-#content-2 {
+#content-2,
+#content-3,
+#content-4,
+#content-5 {
 	display: none;
 }
 
