--- a/css/custom.css
+++ b/css/custom.css
@@ -1,25 +1,19 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300+400);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300);
+@import url(https://fonts.googleapis.com/css?family=Permanent+Marker);
 
-
-/*@font-face {
-    font-family: 'TexGyreAdventor';
-    src: url('../fonts/texgyreadventor-regular.otf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}*/
 
 body {
 	line-height: 1.75em;
-	font-size: 1.25em;
+	font-size: 1.35em;
 	letter-spacing: 0.5px;
 	color: #f5f5f5;
 	background-color: #252525;
-	font-family: 'Roboto', 'Century Gothic', sans-serif;
-/*	font-family: 'TexGyreAdventor', 'Century Gothic', sans-serif;
-*/}
+	font-family: 'Roboto Condensed', 'Helvetica Neue', 'Helvetica', sans-serif;
+	font-weight: 300;
+}
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Oswald', Impact, sans-serif;
+	font-family: 'Permanent Marker', cursive;
 	letter-spacing: 0.5px;
 }
 
@@ -36,11 +30,12 @@ h2 {
 }
 
 h2 span {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Roboto Condensed', 'Helvetica Neue', 'Helvetica', sans-serif;
 }
 
 h3 {
-	font-size: 1.85em;
+	font-size: 1.9em;
+	line-height: 1.45em;
 }
 
 h4 {
@@ -51,9 +46,10 @@ h4 {
 }
 
 h5 {
-	font-size: 1.35em;
+	font-size: 1.25em;
 	color: #dedede;
-	font-weight: 200;
+	font-family: 'Roboto Condensed', 'Helvetica Neue', 'Helvetica', sans-serif;
+	font-weight: 500;
 }
 
 h6 {
@@ -95,10 +91,13 @@ hr {
 	background-color: #559e83;
 }
 .yellow-bkgrd {
-	background-color: #a09b41;
+	background-color: #a09b51;
 }
 .orange-bkgrd {
-	background-color: #ae5a41;
+	background-color: #E07400;
+}
+.purple-bkgrd {
+	background-color: #60525c;
 }
 
 
@@ -116,8 +115,11 @@ a.bottom-btn {
 a.bottom-btn button {
 	width: 100%;
 	padding: 0.75em 0;
+	color: #E07400;
 }
-
+a.bottom-btn button:active {
+	color: #E07400;
+}
 
 
 
@@ -175,12 +177,8 @@ button#home, button#search {
 	padding: 0.5em 0em 0.15em 0em;
 	border-radius: 2px;
 	margin: 0em;
-	font-size: 2em;
 }
-.gig-title span {
-	font-weight: 200;
 
-}
 a.company {
 	text-decoration: underline;
 	color: #cacaca;
@@ -223,12 +221,13 @@ button.interested, button.action {
 	width: 10em;
 	height: 10em;
 	margin: 0 0.5em;
-	border: 2px solid #f1f1f1;
+	border: 4px solid #f1f1f1;
 	border-radius: 0px;
 	display: inline-block;
 }
 .checkbox:hover {
-	background-color: rgba(0, 0, 0, 0.5);
+	opacity: 0.85;
+	filter: alpha(opacity=85);
 }
 
 .checkbox label  {
