--- a/css/custom.css
+++ b/css/custom.css
@@ -117,6 +117,8 @@ a.bottom-btn {
 	display: block;
 	width: 100%;
 	font-size: 1.25em;
+	opacity: 0.98;
+	filter: alpha(opacity=98);
 }
 a.bottom-btn button {
 	width: 100%;
