--- a/css/custom.css
+++ b/css/custom.css
@@ -79,6 +79,13 @@ hr {
 	vertical-align: middle;
 }
 
+#background {
+	background: url(../img/background.jpg) no-repeat fixed center center;
+	background-size: 100% 100%;
+	-webkit-background-size: 100% 100%;
+	-moz-background-size: 100% 100%;
+}
+
 
 /* colors */
 .white-bkgrd {
