--- a/css/custom.css
+++ b/css/custom.css
@@ -80,7 +80,7 @@ hr {
 }
 
 #background {
-	background: url(../img/background.jpg) no-repeat fixed center center;
+	background: url(../img/background.png) no-repeat fixed center center;
 	background-size: 100% 100%;
 	-webkit-background-size: 100% 100%;
 	-moz-background-size: 100% 100%;
