--- a/css/custom.css
+++ b/css/custom.css
@@ -228,7 +228,8 @@ button.interested, button.action {
 #content-2,
 #content-3,
 #content-4,
-#content-5 {
+#content-5,
+#content-6 {
 	display: none;
 }
 
