--- a/css/custom.css
+++ b/css/custom.css
@@ -6,7 +6,7 @@ body {
 	line-height: 1.75em;
 	font-size: 1.35em;
 	letter-spacing: 0.5px;
-	color: #f5f5f5;
+	color: #fff;
 	background-color: #252525;
 	font-family: 'Roboto Condensed', 'Helvetica Neue', 'Helvetica', sans-serif;
 	font-weight: 300;
@@ -115,7 +115,7 @@ hr {
 
 .page-content {
 	padding-top: 5.5em;
-	padding-bottom: 6em;
+	padding-bottom: 3em;
 }
 
 
