editing transparency and background

--- a/css/custom.css
+++ b/css/custom.css
@@ -86,6 +86,11 @@ hr {
 	-moz-background-size: 100% 100%;
 }
 
+.transparent {
+	opacity: 0.9;
+	filter: alpha(opacity=90);
+}
+
 
 /* colors */
 .white-bkgrd {
